fix: border on last item clipped when toolbar is left or right-aligned

--- a/styles.css
+++ b/styles.css
@@ -165,11 +165,7 @@
                     display: block !important;
                 }
             }
-            &:focus-within {
-                border-radius: var(--metadata-property-radius);
-                box-shadow: 0 0 0 1px var(--background-modifier-border);
-                box-shadow: 0 0 0 2px var(--background-modifier-border-focus);
-            }
+
         }
 
         & a {
